--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,12 @@ html{
     font-size: 104px;
 }
 
-body{
+/* body{
     height: 100%;
+    overflow: hidden;
+} */
+
+main{
     overflow: hidden;
 }
 
